--- a/example/mixin/alerts.yaml
+++ b/example/mixin/alerts.yaml
@@ -3,8 +3,7 @@ groups:
   rules:
   - alert: PrometheusOperatorListErrors
     annotations:
-      description: Errors while performing List operations in controller {{$labels.controller}}
-        in {{$labels.namespace}} namespace.
+      description: Errors while performing List operations in controller {{$labels.controller}} in {{$labels.namespace}} namespace.
       summary: Errors while performing list operations in controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="prometheus-operator"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_list_operations_total{job="prometheus-operator"}[10m]))) > 0.4
@@ -13,8 +12,7 @@ groups:
       severity: warning
   - alert: PrometheusOperatorWatchErrors
     annotations:
-      description: Errors while performing watch operations in controller {{$labels.controller}}
-        in {{$labels.namespace}} namespace.
+      description: Errors while performing watch operations in controller {{$labels.controller}} in {{$labels.namespace}} namespace.
       summary: Errors while performing watch operations in controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator"}[5m])) / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator"}[5m]))) > 0.4
@@ -23,8 +21,7 @@ groups:
       severity: warning
   - alert: PrometheusOperatorSyncFailed
     annotations:
-      description: Controller {{ $labels.controller }} in {{ $labels.namespace }}
-        namespace fails to reconcile {{ $value }} objects.
+      description: Controller {{ $labels.controller }} in {{ $labels.namespace }} namespace fails to reconcile {{ $value }} objects.
       summary: Last controller reconciliation failed
     expr: |
       min_over_time(prometheus_operator_syncs{status="failed",job="prometheus-operator"}[5m]) > 0
@@ -33,8 +30,7 @@ groups:
       severity: warning
   - alert: PrometheusOperatorReconcileErrors
     annotations:
-      description: '{{ $value | humanizePercentage }} of reconciling operations failed
-        for {{ $labels.controller }} controller in {{ $labels.namespace }} namespace.'
+      description: '{{ $value | humanizePercentage }} of reconciling operations failed for {{ $labels.controller }} controller in {{ $labels.namespace }} namespace.'
       summary: Errors while reconciling controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator"}[5m]))) / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator"}[5m]))) > 0.1
@@ -43,8 +39,7 @@ groups:
       severity: warning
   - alert: PrometheusOperatorNodeLookupErrors
     annotations:
-      description: Errors while reconciling Prometheus in {{ $labels.namespace }}
-        Namespace.
+      description: Errors while reconciling Prometheus in {{ $labels.namespace }} Namespace.
       summary: Errors while reconciling Prometheus.
     expr: |
       rate(prometheus_operator_node_address_lookup_errors_total{job="prometheus-operator"}[5m]) > 0.1
@@ -53,8 +48,7 @@ groups:
       severity: warning
   - alert: PrometheusOperatorNotReady
     annotations:
-      description: Prometheus operator in {{ $labels.namespace }} namespace isn't
-        ready to reconcile {{ $labels.controller }} resources.
+      description: Prometheus operator in {{ $labels.namespace }} namespace isn't ready to reconcile {{ $labels.controller }} resources.
       summary: Prometheus operator not ready
     expr: |
       min by (controller,namespace) (max_over_time(prometheus_operator_ready{job="prometheus-operator"}[5m]) == 0)
@@ -63,9 +57,7 @@ groups:
       severity: warning
   - alert: PrometheusOperatorRejectedResources
     annotations:
-      description: Prometheus operator in {{ $labels.namespace }} namespace rejected
-        {{ printf "%0.0f" $value }} {{ $labels.controller }}/{{ $labels.resource }}
-        resources.
+      description: Prometheus operator in {{ $labels.namespace }} namespace rejected {{ printf "%0.0f" $value }} {{ $labels.controller }}/{{ $labels.resource }} resources.
       summary: Resources rejected by Prometheus operator
     expr: |
       min_over_time(prometheus_operator_managed_resources{state="rejected",job="prometheus-operator"}[5m]) > 0
