Documentation: update link to image for newer Hugo
Recent versions of Hugo fails to render `troubleshooting.md` when the
`custom-metrics-elements.png` image isn't located in a static directory.

To avoid further complication with the `synchronize.sh` script from the
github.com/prometheus-operator/website project, images are now stored
under `Documentation/img` and the script will copy this directory to the
`static` directory of the website. Any content that wants to include an
image needs to follow the same approach.

The caveat is that the image will not be displayed from the GitHub UI. I
have tried to use page bundles [1] which would circumvent this
limitation but it would involve moving all the individual MarkDown files
into separate directories and rearrange the site's structure.

See also https://github.com/prometheus-operator/website/pull/17

[1] https://gohugo.io/content-management/page-bundles/

Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/.mdox.validate.yaml
+++ b/.mdox.validate.yaml
@@ -1,6 +1,8 @@
 version: 1
 timeout: "1m"
 
+explicitLocalValidators: true
+
 validators:
   # docs.github.com returns 403 if not in browser. Cannot curl as well.
   - regex: 'docs\.github\.com'
@@ -20,3 +22,6 @@ validators:
   # Ignore GitHub container packages link as it returns 404 in curl, but works in browser
   - regex: 'https://github.com/prometheus-operator/prometheus-operator/pkgs/container/prometheus-operator'
     type: "ignore"
+  # Ignore links to /img/ because the generated content will resolve them correctly.
+  - regex: '/img/.+'
+    type: ignore
