--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
@@ -988,11 +988,12 @@ spec:
                 x-kubernetes-map-type: atomic
               alertmanagerConfiguration:
                 description: 'EXPERIMENTAL: alertmanagerConfiguration specifies the
-                  global Alertmanager configuration. If defined, it takes precedence
-                  over the `configSecret` field. This field may change in future releases.'
+                  configuration of Alertmanager. If defined, it takes precedence over
+                  the `configSecret` field. This field may change in future releases.'
                 properties:
                   global:
-                    description: The global config of the Alertmanager.
+                    description: Defines the global parameters of the Alertmanager
+                      configuration.
                     properties:
                       httpConfig:
                         description: HTTP client configuration.
@@ -1023,6 +1024,7 @@ spec:
                                 required:
                                 - key
                                 type: object
+                                x-kubernetes-map-type: atomic
                               type:
                                 description: Set the authentication type. Defaults
                                   to Bearer, Basic will cause an error
@@ -1054,6 +1056,7 @@ spec:
                                 required:
                                 - key
                                 type: object
+                                x-kubernetes-map-type: atomic
                               username:
                                 description: The secret in the service monitor namespace
                                   that contains the username for authentication.
@@ -1075,6 +1078,7 @@ spec:
                                 required:
                                 - key
                                 type: object
+                                x-kubernetes-map-type: atomic
                             type: object
                           bearerTokenSecret:
                             description: The secret's key that contains the bearer
@@ -1098,6 +1102,7 @@ spec:
                             required:
                             - key
                             type: object
+                            x-kubernetes-map-type: atomic
                           followRedirects:
                             description: FollowRedirects specifies whether the client
                               should follow HTTP 3xx redirects.
@@ -1130,6 +1135,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   secret:
                                     description: Secret containing data to use for
                                       the targets.
@@ -1151,6 +1157,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                 type: object
                               clientSecret:
                                 description: The secret containing the OAuth2 client
@@ -1173,6 +1180,7 @@ spec:
                                 required:
                                 - key
                                 type: object
+                                x-kubernetes-map-type: atomic
                               endpointParams:
                                 additionalProperties:
                                   type: string
@@ -1222,6 +1230,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   secret:
                                     description: Secret containing data to use for
                                       the targets.
@@ -1243,6 +1252,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                 type: object
                               cert:
                                 description: Struct containing the client cert file
@@ -1268,6 +1278,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                   secret:
                                     description: Secret containing data to use for
                                       the targets.
@@ -1289,6 +1300,7 @@ spec:
                                     required:
                                     - key
                                     type: object
+                                    x-kubernetes-map-type: atomic
                                 type: object
                               insecureSkipVerify:
                                 description: Disable target certificate validation.
@@ -1314,6 +1326,7 @@ spec:
                                 required:
                                 - key
                                 type: object
+                                x-kubernetes-map-type: atomic
                               serverName:
                                 description: Used to verify the hostname for the targets.
                                 type: string
@@ -1330,10 +1343,10 @@ spec:
                     type: object
                   name:
                     description: The name of the AlertmanagerConfig resource which
-                      is used to generate the global configuration. It must be defined
-                      in the same namespace as the Alertmanager object. The operator
-                      will not enforce a `namespace` label for routes and inhibition
-                      rules.
+                      is used to generate the Alertmanager configuration. It must
+                      be defined in the same namespace as the Alertmanager object.
+                      The operator will not enforce a `namespace` label for routes
+                      and inhibition rules.
                     minLength: 1
                     type: string
                 type: object
